# documentation-helper-llamaindex

./: .env-sample  .gitignore  README.md  app.py  download_docs.py  ingestion.py  llamaindex-docs.dvc  pyproject.toml  requirements.txt
.dvc/: config
tools/: embeddings.py
